--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -4,17 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Functions and Methods Homework \n",
     "\n",
     "Complete the following questions:\n",
@@ -32,28 +21,28 @@
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return 4/3 * 3.14 * rad**3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "113.03999999999999"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check\n",
-    "vol(2)"
+    "vol(3)"
    ]
   },
   {
@@ -66,32 +55,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    x = num\n",
+    "    if x >= low and x <= high:\n",
+    "        print(f'{num} is in the range between {low} and {high}')\n",
+    "    else:\n",
+    "        print(f'{num} is not in the range between {low} and {high}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "0 is not int the range between 2 and 7\n"
      ]
     }
    ],
    "source": [
     "# Check\n",
-    "ran_check(5,2,7)"
+    "ran_check(0,2,7)"
    ]
   },
   {
@@ -103,34 +96,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    x = num\n",
+    "    if x >= low and x <= high:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ran_bool(3,1,10)"
+    "ran_bool(11,1,10)"
    ]
   },
   {
@@ -152,28 +149,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    upper = 0\n",
+    "    lower = 0\n",
+    "\n",
+    "    for i in s:\n",
+    "        if s[i].isupper():\n",
+    "            upper += 1\n",
+    "        elif s[i].lower():\n",
+    "            lower += 1\n",
+    "    \n",
+    "    print(f'No. of Upper case characters :  {upper}')\n",
+    "    print(f'No. of Lower case characters :  {lower}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m s \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHello Mr. Rogers, how are you this fine Tuesday?\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mup_low\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[14], line 6\u001b[0m, in \u001b[0;36mup_low\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m      3\u001b[0m lower \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m s:\n\u001b[1;32m----> 6\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43ms\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39misupper():\n\u001b[0;32m      7\u001b[0m         upper \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01melif\u001b[39;00m s[i]\u001b[38;5;241m.\u001b[39mlower():\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
      ]
     }
    ],
@@ -409,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
