--- a/03-Methods and Functions/07-args and kwargs.ipynb
+++ b/03-Methods and Functions/07-args and kwargs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "5.0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "6.0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "6.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "6.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,6 +139,64 @@
     "    return sum(spam)*.05\n",
     "\n",
     "myfunc(40,60,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def myNumbers(*args):\n",
+    "    myList = []\n",
+    "    for num in args:\n",
+    "        if num % 2 == 0:\n",
+    "            myList.append(num)\n",
+    "    return myList\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(myNumbers(5,6,7,8))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AnThRoPoMoRpHiSm\n"
+     ]
+    }
+   ],
+   "source": [
+    "def skyLine(word):\n",
+    "    newWord = []\n",
+    "    for i in range(len(word)):\n",
+    "        if i % 2 == 0:\n",
+    "            newWord.append(word[i].upper())\n",
+    "        else:\n",
+    "            newWord.append(word[i].lower())\n",
+    "    return ''.join(newWord)\n",
+    "\n",
+    "print(skyLine('Anthropomorphism'))"
    ]
   },
   {
@@ -275,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
