--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -31,28 +31,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    if a % 2 == 0 and b % 2 == 0:\n",
-    "        if a > b:\n",
-    "            return b\n",
-    "        else:\n",
-    "            return a\n",
-    "        \n",
-    "    elif a > b: \n",
-    "        return \n",
+    "    if a < b :\n",
+    "        return a\n",
     "    else:\n",
-    "        return b"
+    "        return b\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -63,7 +58,7 @@
        "2"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -83,10 +78,10 @@
     {
      "data": {
       "text/plain": [
-       "5"
+       "2"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,24 +102,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    word = text.split(\" \")\n",
+    "    word = text.split()\n",
     "    \n",
     "    if word[0][0] == word[1][0]:\n",
     "        return True\n",
     "    else:\n",
-    "        return False"
+    "        return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -135,7 +130,7 @@
        "True"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -158,7 +153,7 @@
        "False"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,24 +176,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
-    "    if n1 + n2  == 20 :\n",
+    "    if n1 == 20 or n2 == 20:\n",
     "        return True\n",
-    "    elif n1 == 20 or n2 == 20:\n",
+    "    elif n1 + n2 == 20:\n",
     "        return True\n",
-    "    else:\n",
-    "        return False"
+    "    else: \n",
+    "        return False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -209,7 +204,7 @@
        "True"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -232,7 +227,7 @@
        "False"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true
    },
@@ -272,12 +267,13 @@
     "    if len(name) > 3:\n",
     "        return name[:3].capitalize() + name[3:].capitalize()\n",
     "    else:\n",
-    "        return 'Name is too short'"
+    "        return 'Name is too short!'\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -288,7 +284,7 @@
        "'MacDonald'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,21 +316,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    return ' '.join(text.split()[::-1])\n",
-    "    # return ' '.join(text[::-1].split())\n",
-    "    "
+    "    return \" \".join(text.split(\" \")[::-1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -345,7 +339,7 @@
        "'home am I'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,23 +377,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def almost_there(n):\n",
-    "    pass"
+    "    return ((abs(100 - n) <= 10) or (abs(200 - n) <= 10))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(104)"
@@ -407,11 +412,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(150)"
@@ -419,11 +435,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "almost_there(209)"
@@ -451,23 +478,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def has_33(nums):\n",
-    "    pass"
+    "    for i in range(0, len(nums)-1):\n",
+    "        if nums[i] == 3 and nums[i+1] == 3:\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 3])"
@@ -475,11 +516,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([1, 3, 1, 3])"
@@ -487,11 +539,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "has_33([3, 1, 3])"
@@ -508,23 +571,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def paper_doll(text):\n",
-    "    pass"
+    "    word =  []\n",
+    "    for char in text:\n",
+    "        word.append(char*3)\n",
+    "    print(\"\".join(word))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HHHeeellllllooo\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Hello')"
@@ -532,11 +606,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MMMiiissssssiiissssssiiippppppiii\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "paper_doll('Mississippi')"
@@ -554,23 +636,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def blackjack(a,b,c):\n",
-    "    pass"
+    "    eleven = False\n",
+    "    if a == 11 or b == 11 or c == 11:\n",
+    "        eleven = True\n",
+    "    # print(eleven)\n",
+    "    sum = a + b + c\n",
+    "    \n",
+    "    if sum <= 21:\n",
+    "        return print(sum)\n",
+    "    elif sum >21 and eleven:\n",
+    "        sum = sum - 10\n",
+    "        if sum > 21:\n",
+    "            return print(\"BUST\")\n",
+    "        else:\n",
+    "            print(sum)\n",
+    "    else:\n",
+    "        return print(\"BUST\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(5,6,7)"
@@ -578,11 +683,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BUST\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,9)"
@@ -590,11 +703,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "blackjack(9,9,11)"
@@ -620,6 +741,7 @@
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
+    "    print(arr)\n",
     "    pass"
    ]
   },
