--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -734,24 +734,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def summer_69(arr):\n",
-    "    print(arr)\n",
-    "    pass"
+    "    # print(arr)\n",
+    "    sum = 0\n",
+    "    add = True\n",
+    "\n",
+    "    for i in arr:\n",
+    "        if i == 6 or i == 9:\n",
+    "            add = not add\n",
+    "            # print(add)\n",
+    "        if add and i != 9:\n",
+    "            sum += i\n",
+    "        # print(i)\n",
+    "\n",
+    "    print(f\"Sum = {sum}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum = 9\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([1, 3, 5])"
@@ -759,11 +778,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum = 9\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([4, 5, 6, 7, 8, 9])"
@@ -771,11 +798,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum = 14\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "summer_69([2, 1, 6, 9, 11])"
