--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -836,23 +836,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def spy_game(nums):\n",
-    "    pass"
+    "    spy = []\n",
+    "    for i in range(0, len(nums)):\n",
+    "        if nums[i] == 0 or nums[i] == 7:\n",
+    "            spy.append(nums[i])\n",
+    "    \n",
+    "    if spy == [0,0,7]:\n",
+    "        return print(\"True\")\n",
+    "    else:\n",
+    "        return print(\"False\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,2,4,0,0,7,5])"
@@ -860,11 +876,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,0,2,4,0,5,7])"
@@ -872,11 +896,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Check\n",
     "spy_game([1,7,2,0,4,5,0])"
@@ -901,6 +933,12 @@
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
+    "    count = 0 \n",
+    "    index = 0\n",
+    "    \n",
+    "    # for i in range(2, num):\n",
+    "    #     if \n",
+    "    print()\n",
     "    pass\n",
     "                "
    ]
