--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -38,11 +38,10 @@
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    if a < b :\n",
-    "        return a\n",
+    "    if a % 2 == 0 and b % 2 == 0:\n",
+    "        return min(a,b)\n",
     "    else:\n",
-    "        return b\n",
-    "    pass"
+    "        return min(a,b)"
    ]
   },
   {
