--- a/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
+++ b/03-Methods and Functions/04-Function Practice Exercises - Solutions.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
        "2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,20 +97,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
-    "    wordlist = text.split()\n",
+    "    wordlist = text.lower().split()\n",
     "    return wordlist[0][0] == wordlist[1][0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -271,7 +271,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def old_macdonald(name):\n",
+    "    first_letter = name[0].upper()\n",
+    "    inbetween = name[1:3]\n",
+    "    fourth_letter = name[3].upper()\n",
+    "    rest = name[4:]\n",
+    "\n",
+    "    return first_letter + inbetween + fourth_letter + rest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +295,7 @@
        "'MacDonald'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,22 +952,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def count_primes(num):\n",
-    "    primes = [2]\n",
-    "    x = 3\n",
-    "    if num < 2:  # for the case of num = 0 or 1\n",
+    "\n",
+    "    # for the case of num = 0 or 1\n",
+    "    if num < 2:  \n",
     "        return 0\n",
+    "    \n",
+    "    # 2 or greater\n",
+    "    # store prime numbers\n",
+    "    primes = [2]\n",
+    "    # counter going up to the input num\n",
+    "    x = 3\n",
+    "\n",
+    "    # x is going through every number up to input number\n",
     "    while x <= num:\n",
     "        for y in range(3,x,2):  # test all odd factors up to x-1\n",
     "            if x%y == 0:\n",
     "                x += 2\n",
     "                break\n",
+    "        #if for never breaks the run this else\n",
     "        else:\n",
     "            primes.append(x)\n",
     "            x += 2\n",
@@ -963,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +1003,7 @@
        "25"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -998,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -1023,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1063,7 @@
        "25"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
