--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -4,17 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "___\n",
-    "\n",
-    "<a href='https://www.udemy.com/user/joseportilla/'><img src='../Pierian_Data_Logo.png'/></a>\n",
-    "___\n",
-    "<center><em>Content Copyright by Pierian Data</em></center>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Functions and Methods Homework \n",
     "\n",
     "Complete the following questions:\n",
@@ -25,19 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def vol(rad):\n",
+    "    return (4/3) * 3.14 * rad ** 3\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +36,7 @@
        "33.49333333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,26 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if low <= num and high >= num:\n",
+    "        print(f\"{num} is in the range between {low} and {high} \")\n",
+    "    else:\n",
+    "        print(f\"{num} is not int the range between {low} and {high} \")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "5 is in the range between 2 and 7 \n"
      ]
     }
    ],
@@ -103,19 +96,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return low <= num and high >= num"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -124,12 +117,14 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "ran_bool(3,1,10)\n",
+    "ran_bool(33,1,10)\n",
     "ran_bool(3,1,10)"
    ]
   },
@@ -152,28 +147,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    upper = 0\n",
+    "    lower = 0\n",
+    "\n",
+    "    # print(\" \".join(s.split(\" \"))\n",
+    "    for char in s:\n",
+    "        if char.isupper():\n",
+    "            upper += 1\n",
+    "        elif char.islower():\n",
+    "            lower += 1\n",
+    "\n",
+    "    print(f\"No. of Upper case characters : {upper}\")\n",
+    "    print(f\"No. of Lower case Characters : {lower}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "H\n",
+      "M\n",
+      "R\n",
+      "T\n",
+      "No. of Upper case characters : 4\n",
+      "No. of Lower case Characters : 33\n"
      ]
     }
    ],
@@ -409,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
