--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -170,17 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "H\n",
-      "M\n",
-      "R\n",
-      "T\n",
       "No. of Upper case characters : 4\n",
       "No. of Lower case Characters : 33\n"
      ]
@@ -204,30 +200,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
+    "    print(\n",
+    "        list(\n",
+    "            set(lst)\n",
+    "        )\n",
+    "    )\n",
+    "\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
     }
    ],
    "source": [
@@ -247,30 +246,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def multiply(numbers):  \n",
-    "    pass"
+    "def multiply(numbers): \n",
+    "    total = 1\n",
+    "    for num in numbers:\n",
+    "        total *= num\n",
+    "    print(total) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-24"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-24\n"
+     ]
     }
    ],
    "source": [
@@ -289,34 +288,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    if s == s[::-1]:\n",
+    "        print(\"Palindrome\")\n",
+    "    else:\n",
+    "        print(\"Not a palindrome\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a palindrome\n",
+      "Palindrome\n"
+     ]
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('hellehasdfasdf')\n",
+    "palindrome('helleh helleh')"
    ]
   },
   {
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -349,27 +350,39 @@
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    print(f\"alphabet: {alphabet}\")\n",
+    "    str1 = str1.lower()\n",
+    "    for letter in str1:\n",
+    "        if letter in alphabet:\n",
+    "            alphabet = alphabet.replace(letter, '')\n",
+    "    if len(alphabet) == 0:\n",
+    "        print(\"Is a pangram\")\n",
+    "    else:\n",
+    "        print(\"Not a pangram\")\n",
+    "    print(f\"alphabet: {alphabet} \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alphabet: abcdefghijklmnopqrstuvwxyz\n",
+      "Is a pangram\n",
+      "alphabet:  \n",
+      "alphabet: abcdefghijklmnopqrstuvwxyz\n",
+      "Not a pangram\n",
+      "alphabet: abdfgjlmnoprsvwxyz \n"
+     ]
     }
    ],
    "source": [
-    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+    "ispangram(\"The quick brown fox jumps over the lazy dog\")\n",
+    "ispangram(\"The quick\")"
    ]
   },
   {
