--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -71,20 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7 \n"
+      "5 is in the range between 2 and 7 \n",
+      "7 is in the range between 2 and 7 \n"
      ]
     }
    ],
    "source": [
     "# Check\n",
-    "ran_check(5,2,7)"
+    "ran_check(5,2,7)\n",
+    "ran_check(7,2,7)"
    ]
   },
   {
@@ -288,13 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
+    "    s = s.replace(' ','')\n",
     "    if s == s[::-1]:\n",
     "        print(\"Palindrome\")\n",
     "    else:\n",
@@ -303,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,13 +314,15 @@
      "output_type": "stream",
      "text": [
       "Not a palindrome\n",
+      "Palindrome\n",
       "Palindrome\n"
      ]
     }
    ],
    "source": [
     "palindrome('hellehasdfasdf')\n",
-    "palindrome('helleh helleh')"
+    "palindrome('helleh helleh')\n",
+    "palindrome('nurses run')"
    ]
   },
   {
