--- a/03-Methods and Functions/09-Functions and Methods Homework - Solutions.ipynb
+++ b/03-Methods and Functions/09-Functions and Methods Homework - Solutions.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -79,20 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 is in the range between 2 and 7\n"
+      "5 is in the range between 2 and 7\n",
+      "7 is in the range between 2 and 7\n"
      ]
     }
    ],
    "source": [
     "# Check\n",
-    "ran_check(5,2,7)"
+    "ran_check(5,2,7)\n",
+    "ran_check(7,2,7)"
    ]
   },
   {
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -173,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
