--- a/04-Milestone Project - 1/00-Warm-Up-Project-Exercises.ipynb
+++ b/04-Milestone Project - 1/00-Warm-Up-Project-Exercises.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -37,19 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]\n"
      ]
     }
    ],
    "source": [
-    "mylist = [0,1,2,3,4,5,6,7,8,9,10]\n",
+    "mylist = [0,1,2,3,4,5,6,7,8,9,10, 11]\n",
     "display_list(mylist)"
    ]
   },
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -422,25 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Choose a number: hello\n",
-      "Choose a number: two\n",
-      "Choose a number: 2\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "2"
+       "23"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -485,25 +476,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a number: two\n",
       "Sorry, but you did not enter an integer. Please try again.\n",
-      "Choose a number: 2\n"
+      "Sorry, but you did not enter an integer. Please try again.\n",
+      "Sorry, but you did not enter an integer. Please try again.\n",
+      "Sorry, but you did not enter an integer. Please try again.\n",
+      "Sorry, but you did not enter an integer. Please try again.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "2"
+       "213"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,9 +745,11 @@
     "    \n",
     "        choice = input(\"Please enter a number (0-10): \")\n",
     "        \n",
+    "        # digit check\n",
     "        if choice.isdigit() == False:\n",
     "            print(\"Sorry that is not a digit!\")\n",
-    "            \n",
+    "        \n",
+    "        # range check\n",
     "        if choice.isdigit() == True:\n",
     "            if int(choice) in range(0,10):\n",
     "                within_range = True\n",
@@ -1009,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
