--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -52,8 +52,22 @@
     "from IPython.display import clear_output\n",
     "\n",
     "def display_board(board):\n",
+    "    # board = [' ',' ',' ',' ',' ',' ',' ',' ',' ',' ']\n",
+    "    # print('\\n'*100)\n",
+    "    clear_output()\n",
+    "    print(f\"        |        |       \")\n",
+    "    print(f\"   {board[1]}    |   {board[2]}    |   {board[3]}    \")\n",
+    "    print(f\"________|________|_______\")\n",
+    "\n",
+    "    print(f\"        |        |       \")\n",
+    "    print(f\"   {board[4]}    |   {board[5]}    |   {board[6]}    \")\n",
+    "    print(f\"________|________|_______\")\n",
+    "\n",
+    "    print(f\"        |        |       \")\n",
+    "    print(f\"   {board[7]}    |   {board[8]}    |   {board[9]}    \")\n",
+    "    print(f\"        |        |       \")\n",
     "    \n",
-    "    pass"
+    "    print(f\"=========================\")"
    ]
   },
   {
@@ -65,11 +79,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        |        |       \n",
+      "   X    |   O    |   X    \n",
+      "________|________|_______\n",
+      "        |        |       \n",
+      "   O    |   X    |   O    \n",
+      "________|________|_______\n",
+      "        |        |       \n",
+      "   X    |   O    |   X    \n",
+      "        |        |       \n",
+      "=========================\n"
+     ]
+    }
+   ],
    "source": [
     "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
     "display_board(test_board)"
@@ -84,15 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def player_input():\n",
-    "    \n",
-    "    pass"
+    "    '''\n",
+    "        OUTPUT = (player1 marker, player 2 marker)\n",
+    "    ''' \n",
+    "\n",
+    "    marker = ''\n",
+    "\n",
+    "    #  ask player 1 to choose X or O\n",
+    "    while marker != 'X' and marker != 'O':\n",
+    "        marker = input('Player 1, choose X or O: ').upperpper()\n",
+    "\n",
+    "    if marker == 'X':\n",
+    "        return ('X', 'O')\n",
+    "    else:\n",
+    "        return ('O', 'X')"
    ]
   },
   {
@@ -104,13 +147,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('X', 'O')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "player_input()"
+    "player1Marker, player2Marker = player_input()"
    ]
   },
   {
@@ -122,15 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
-    "    \n",
-    "    pass"
+    "    board[position] = marker"
    ]
   },
   {
@@ -142,11 +195,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        |        |       \n",
+      "   X    |   O    |   X    \n",
+      "________|________|_______\n",
+      "        |        |       \n",
+      "   O    |   X    |   O    \n",
+      "________|________|_______\n",
+      "        |        |       \n",
+      "   X    |   $    |   X    \n",
+      "        |        |       \n",
+      "=========================\n"
+     ]
+    }
+   ],
    "source": [
     "place_marker(test_board,'$',8)\n",
     "display_board(test_board)"
@@ -168,8 +238,19 @@
    "outputs": [],
    "source": [
     "def win_check(board, mark):\n",
-    "    \n",
-    "    pass"
+    "    return (\n",
+    "        # check all rows\n",
+    "        (board[1] == mark and board[2] == mark and board[3] == mark) or\n",
+    "        (board[4] == mark and board[5] == mark and board[6] == mark) or\n",
+    "        (board[7] == mark and board[8] == mark and board[9] == mark) or\n",
+    "        # check all columns\n",
+    "        (board[1] == mark and board[4] == mark and board[7] == mark) or\n",
+    "        (board[2] == mark and board[5] == mark and board[8] == mark) or\n",
+    "        (board[3] == mark and board[6] == mark and board[9] == mark) or\n",
+    "        # check 2 diaangonals \n",
+    "        (board[1] == mark and board[5] == mark and board[9] == mark) or\n",
+    "        (board[7] == mark and board[5] == mark and board[3] == mark) \n",
+    "    )"
    ]
   },
   {
@@ -352,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
