--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -262,11 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "win_check(test_board,'X')"
    ]
@@ -289,7 +300,13 @@
     "import random\n",
     "\n",
     "def choose_first():\n",
-    "    pass"
+    "\n",
+    "    flip = random.randint(0,1)\n",
+    "\n",
+    "    if flip == 0:\n",
+    "        return 'Player 1'\n",
+    "    else:\n",
+    "        return 'Player 2'"
    ]
   },
   {
@@ -308,8 +325,10 @@
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
-    "    \n",
-    "    pass"
+    "    if board[position] == ' ':\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False "
    ]
   },
   {
