--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -325,10 +325,11 @@
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
-    "    if board[position] == ' ':\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False "
+    "    return board[position] == ' '\n",
+    "    # if board[position] == ' ':\n",
+    "    #     return True\n",
+    "    # else:\n",
+    "    #     return False "
    ]
   },
   {
@@ -347,8 +348,11 @@
    "outputs": [],
    "source": [
     "def full_board_check(board):\n",
-    "    \n",
-    "    pass"
+    "    for i in range(1, 10):\n",
+    "        if space_check(board, i):\n",
+    "            return False\n",
+    "    # Board is full\n",
+    "    return True"
    ]
   },
   {
