--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -130,7 +130,7 @@
     "\n",
     "    #  ask player 1 to choose X or O\n",
     "    while marker != 'X' and marker != 'O':\n",
-    "        marker = input('Player 1, choose X or O: ').upperpper()\n",
+    "        marker = input('Player 1, choose X or O: ').upper()\n",
     "\n",
     "    if marker == 'X':\n",
     "        return ('X', 'O')\n",
@@ -147,22 +147,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('X', 'O')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "player1Marker, player2Marker = player_input()"
    ]
@@ -371,8 +360,11 @@
    "outputs": [],
    "source": [
     "def player_choice(board):\n",
-    "    \n",
-    "    pass"
+    "    position = 0\n",
+    "\n",
+    "    while position not in range(1,10) or not space_check(board, position):\n",
+    "        position = int(input('Choose a position (1-9) '))\n",
+    "    return position"
    ]
   },
   {
@@ -391,8 +383,8 @@
    "outputs": [],
    "source": [
     "def replay():\n",
-    "    \n",
-    "    pass"
+    "    choice = input('Play again? Enter Yes or No')\n",
+    "    return choice == 'Yes'"
    ]
   },
   {
@@ -414,20 +406,34 @@
    "source": [
     "print('Welcome to Tic Tac Toe!')\n",
     "\n",
-    "#while True:\n",
+    "while True:\n",
     "    # Set the game up here\n",
-    "    #pass\n",
+    "    board = [' '] * 10\n",
+    "    player1Marker, player2Marker = player_input()\n",
+    "    \n",
+    "    turn = choose_first()\n",
+    "    print(f\"{turn} will go first\")\n",
     "\n",
-    "    #while game_on:\n",
+    "    playGame = input('Ready to play? y or n?')\n",
+    "\n",
+    "    if playGame == 'y':\n",
+    "        gameOn = True\n",
+    "    else:\n",
+    "        gameOn = False\n",
+    "\n",
+    "\n",
+    "    while gameOn:\n",
     "        #Player 1 Turn\n",
-    "        \n",
-    "        \n",
-    "        # Player2's turn.\n",
+    "        if turn == 'Player 1':\n",
+    "            display_board(board)\n",
+    "            # choose position\n",
     "            \n",
-    "            #pass\n",
+    "        # Player2's turn.\n",
+    "        else:\n",
+    "            pass\n",
     "\n",
-    "    #if not replay():\n",
-    "        #break"
+    "    if not replay():\n",
+    "        break"
    ]
   },
   {
